--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "gh-pages": "^1.2.0",
     "moment": "^2.22.2",
     "mongoose": "^5.1.6",
     "react": "^16.4.1",
